apps/radarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      volumes:
        - name: radarr-nfs
          persistentVolumeClaim:
            claimName: radarr-nfs
        - name: downloads
          persistentVolumeClaim:
            claimName: download
      containers:
        - name: radarr
          image: ghcr.io/hotio/radarr:release-5.1.3.8246
          ports:
            - containerPort: 7878
          volumeMounts:
            - name: radarr-nfs
              mountPath: /config
            - name: downloads
              mountPath: /data
      nodeSelector:
          pvpn: "true"
      tolerations:
          - key: "network"
            operator: "Equal"
            value: "pvpn"
            effect: "NoSchedule"
