apps/radarr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: radarr-service
  namespace: media
spec:
  ports:
  - name: http
    port: 7878
    protocol: TCP
  selector:
    app: radarr
  type: ClusterIP
